# ForexFrenzy

./: CreateRowRates.py  db2.sqlite3  manage.py  pyproject.toml  pytest.ini
ForexFProject/: asgi.py  settings.py  urls.py  wsgi.py
ForexFProject/api/: wnapi.py
ForexFProject/chatgpt/: gpt_connect.py  gpt_news.py  gpt_rates_explanation.py
ForexFProject/scraper/: webscraping.py
ForexFProject/scraper/tests/: test_webscraping.py
forexfrenzy/: admin.py  apps.py  dash_apps.py  functions.py  index.html  models.py  urls.py  views.py
forexfrenzy/migrations/: 0001_initial.py  0002_flags_provider.py  0002_rates_amount.py  0003_alter_rates_cnb_alter_rates_dev_buy_and_more.py  0004_users_watchdog_pref.py
forexfrenzy/static/css/: Contact-Details-icons.css
forexfrenzy/templates/: index.html
forexfrenzy/templates/forexfrenzy/: FirstDashboard.html  contact.html  features.html  privacy.html  rates.html
