[tool.poetry]
name = "forexfproject"
version = "0.1.0"
description = ""
authors = ["Tomas Fancovic (GBS R2R CZ BI) <tomas.fancovic@siemens.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
requests = "^2.32.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
django = "^5.1.3"
openai = "^1.55.0"
pytest = "^8.3.3"




[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"
worldnewsapi = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
